// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shared Table 이벤트가 없는 테이블 컴포넌트가 렌더링된다 1`] = `
<DocumentFragment>
  <div
    class="css-16omkrh"
  >
    <table
      class="css-gi96c8"
    >
      <thead>
        <tr
          class="css-19bh3p5"
        >
          <th>
            빵집 번호
          </th>
          <th>
            빵집 이름
          </th>
          <th>
            등록일
          </th>
          <th>
            마지막 수정일
          </th>
          <th>
            상태
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="css-19bh3p5"
          data-testid="row"
        >
          <td>
            3
          </td>
          <td>
            테스트 성수점
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            2023-01-16
          </td>
          <td>
            <div
              class="css-1gzqjqd"
              color="#F3213B"
            >
              <div>
                <svg
                  fill="none"
                  fillcolor="#F3213B"
                  height="10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="3.5"
                    cy="3.5"
                    fill="#F3213B"
                    r="3.5"
                  />
                </svg>
              </div>
              <span>
                미게시
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="css-19bh3p5"
          data-testid="row"
        >
          <td>
            2
          </td>
          <td>
            빵빵 강남점
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            <div
              class="css-1uzinym"
              color="#1EC780"
            >
              <div>
                <svg
                  fill="none"
                  fillcolor="#1EC780"
                  height="10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="3.5"
                    cy="3.5"
                    fill="#1EC780"
                    r="3.5"
                  />
                </svg>
              </div>
              <span>
                게시중
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="css-19bh3p5"
          data-testid="row"
        >
          <td>
            1
          </td>
          <td>
            일산 브레드
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            <div
              class="css-1gzqjqd"
              color="#F3213B"
            >
              <div>
                <svg
                  fill="none"
                  fillcolor="#F3213B"
                  height="10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="3.5"
                    cy="3.5"
                    fill="#F3213B"
                    r="3.5"
                  />
                </svg>
              </div>
              <span>
                미게시
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Shared Table 이벤트가 있는 테이블 컴포넌트가 렌더링된다 1`] = `
<DocumentFragment>
  <div
    class="css-16omkrh"
  >
    <table
      class="css-em288z"
    >
      <thead>
        <tr
          class="css-19bh3p5"
        >
          <th>
            빵집 번호
          </th>
          <th>
            빵집 이름
          </th>
          <th>
            등록일
          </th>
          <th>
            마지막 수정일
          </th>
          <th>
            상태
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="css-19bh3p5"
          data-testid="row"
        >
          <td>
            3
          </td>
          <td>
            테스트 성수점
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            2023-01-16
          </td>
          <td>
            <div
              class="css-1gzqjqd"
              color="#F3213B"
            >
              <div>
                <svg
                  fill="none"
                  fillcolor="#F3213B"
                  height="10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="3.5"
                    cy="3.5"
                    fill="#F3213B"
                    r="3.5"
                  />
                </svg>
              </div>
              <span>
                미게시
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="css-19bh3p5"
          data-testid="row"
        >
          <td>
            2
          </td>
          <td>
            빵빵 강남점
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            <div
              class="css-1uzinym"
              color="#1EC780"
            >
              <div>
                <svg
                  fill="none"
                  fillcolor="#1EC780"
                  height="10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="3.5"
                    cy="3.5"
                    fill="#1EC780"
                    r="3.5"
                  />
                </svg>
              </div>
              <span>
                게시중
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="css-19bh3p5"
          data-testid="row"
        >
          <td>
            1
          </td>
          <td>
            일산 브레드
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            2023-01-15
          </td>
          <td>
            <div
              class="css-1gzqjqd"
              color="#F3213B"
            >
              <div>
                <svg
                  fill="none"
                  fillcolor="#F3213B"
                  height="10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="3.5"
                    cy="3.5"
                    fill="#F3213B"
                    r="3.5"
                  />
                </svg>
              </div>
              <span>
                미게시
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
